Add Film MVC and simpleform

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,9 @@ AllCops:
 
 Metrics/LineLength:
   Max: 120
+  Exclude:
+    - config/initializers/simple_form_bootstrap.rb
+    - config/initializers/simple_form.rb
 
 Metrics/BlockLength:
   Enabled: true
